--- a/slides/index.html
+++ b/slides/index.html
@@ -460,7 +460,7 @@
 						<aside class="notes">
 							For the tree reconstruction, we identified 48 core genes that have FAS >= 0.75 & present in at least 50% of the taxa in each supterkingdom
 							(the one in the red box on this profile plot).<br>
-							From that, we got a super-alignment for the 139 taxa with the lenght of about 13,000 amino acids.<br>
+							From that, we got a super-alignment for the 139 taxa with the length of about 13,000 amino acids.<br>
 							Then, we used IQ-tree to reconstruct the tree using these parameters:<br>
 							...<br>
 							<i>LG substitution with FreeRate model</i>
@@ -481,7 +481,7 @@
 						<p><img src="images/071_hypotheses.png" style='float: right; border:0; box-shadow: none' height=300/ class="fragment roll-in"></p>
 						<p><img src="images/075_asgard_tree_schematic.jpg" style='float: left; border:0; box-shadow: none' height=300/></p>
 						<aside class="notes">
-							To better compare with the different species tree of life hypotheses, I re-draw the previous tree with this schematic tree.<br>
+							To better compare with the different species tree of life hypotheses, I re-draw the previous tree into this schematic tree.<br>
 							Clearly,
 							<ul>
 								<li>it supports the three-domains tree of life (Williams et al. 2020 and Raymann et al. 2015 => 2 domains tree of life)</li>
